--- a/pages_config.json
+++ b/pages_config.json
@@ -8,6 +8,9 @@
     },
     {
       "url": "https://www.linkedin.com/company/finda-cloud/"
+    },
+    {
+      "url": "https://www.linkedin.com/showcase/mc-zero-trust/"
     }
   ]
 }
